--- a/static/style/main.css
+++ b/static/style/main.css
@@ -1,15 +1,28 @@
- p {
-  padding: 0px;
-  margin: 20px;
-}
 
 table {
-  border-top: solid 1px #000;
-  border-left: solid 1px #000;
+//  border-top: solid 1px #000;
+//  border-left: solid 1px #000;
 }
 
 th, td {
-  border-right: solid 1px #000;
-  border-bottom: solid 1px #000;
+//  border-right: solid 1px #000;
+//  border-bottom: solid 1px #000;
+//  padding: 4px;
 }
 
+input.txt_search {
+//  height: 21px;
+//  margin-left: 8px;
+}
+
+.btn_search {
+//  cursor: pointer;
+}
+
+#btn_search_by_genre {
+//  width: 160px;
+}
+
+.opt_search>li>a {
+  cursor: pointer;
+}
